--- a/gsdemo/pom.xml
+++ b/gsdemo/pom.xml
@@ -6,6 +6,64 @@
   <packaging>war</packaging>
   <name>gsdemo</name>
   <description>giga space demo</description>
+  
+      <properties>
+        <springframework.version>4.0.6.RELEASE</springframework.version>
+    </properties>
+    	
+      <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+        
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+    </dependencies>
+    
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -17,14 +75,14 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-      </plugin>
+<!--       <plugin> -->
+<!--         <artifactId>maven-war-plugin</artifactId> -->
+<!--         <version>2.6</version> -->
+<!--         <configuration> -->
+<!--           <warSourceDirectory>WebContent</warSourceDirectory> -->
+<!--           <failOnMissingWebXml>false</failOnMissingWebXml> -->
+<!--         </configuration> -->
+<!--       </plugin> -->
     </plugins>
   </build>
 </project>
