--- a/hibpract/pom.xml
+++ b/hibpract/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.7</version>
 		</dependency>
+  <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-test</artifactId>
+	<version>2.5</version>
+</dependency>
+  
   
   </dependencies>
   <build>
