--- a/mvcpract/pom.xml
+++ b/mvcpract/pom.xml
@@ -161,6 +161,12 @@
 			</exclusions>
 
 		</dependency>
+		
+		  <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-test</artifactId>
+	<version>2.5.6</version>
+</dependency>
 
 	</dependencies>
 
