A bit more refactoring

--- a/mvcpract/WebContent/WEB-INF/web.xml
+++ b/mvcpract/WebContent/WEB-INF/web.xml
@@ -39,7 +39,7 @@
 		</init-param>	
 		    <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>com.pallelli.mvcpract.rest</param-value>
+      <param-value>com.pallelli.mvcpract.rest,com.pallelli.mvcpract.security</param-value>
     </init-param>	
 		<load-on-startup>1</load-on-startup>
 	</servlet>
