--- a/mvcpract/WebContent/WEB-INF/web.xml
+++ b/mvcpract/WebContent/WEB-INF/web.xml
@@ -1,62 +1,41 @@
-<web-app version="3.0" 
-	xmlns="http://java.sun.com/xml/ns/javaee" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                       
-						http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-
-	<display-name>mvc practice</display-name>
-
-<!-- 	<servlet> -->
-<!-- 		<servlet-name>mvc-dispatcher</servlet-name> -->
-<!-- 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class> -->
-<!-- 		<load-on-startup>1</load-on-startup> -->
-<!-- 	</servlet> -->
-
-<!-- 	<servlet-mapping> -->
-<!-- 		<servlet-name>mvc-dispatcher</servlet-name> -->
-<!-- 		<url-pattern>/tgsdemo/*</url-pattern> -->
-<!-- 	</servlet-mapping> -->
-
-<!-- 	<servlet> -->
-<!-- 		<servlet-name>Jersey Web Application</servlet-name> -->
-		
-<!-- 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class> -->
-<!-- 		<init-param> -->
-<!--         <param-name>com.sun.jersey.config.property.packages</param-name> -->
-<!--         <param-value>com.pallelli.mvcpract.rest</param-value> -->
-<!--     	</init-param> -->
-<!-- 		<load-on-startup>1</load-on-startup> -->
-<!-- 	</servlet> -->
-	
-	<servlet>
-		<servlet-name>Jersey Web Application</servlet-name>
-		<servlet-class>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>mvc practice</display-name>
+  <servlet>
+    <servlet-name>Jersey Web Application</servlet-name>
+    <servlet-class>
 			org.glassfish.jersey.servlet.ServletContainer
 		</servlet-class>
-		<init-param>
-			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>com.pallelli.mvcpract.DietLogApplication</param-value>			
-		</init-param>	
-		    <init-param>
+    <init-param>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>com.pallelli.mvcpract.DietLogApplication</param-value>
+    </init-param>
+    <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
       <param-value>com.pallelli.mvcpract.rest,com.pallelli.mvcpract.security</param-value>
-    </init-param>	
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	
-	
-	<servlet-mapping>
-		<servlet-name>Jersey Web Application</servlet-name>
-		<url-pattern>/mvcpract/*</url-pattern>
-	</servlet-mapping>
-
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
-	</context-param>
-
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Jersey Web Application</servlet-name>
+    <url-pattern>/mvcpract/*</url-pattern>
+  </servlet-mapping>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>/WEB-INF/applicationContext.xml</param-value>
+  </context-param>
+  <servlet>
+    <servlet-name>dlmvc</servlet-name>
+    <servlet-class>
+<!-- 		com.pallelli.mvcpract.springmvc.MyServlet -->
+			org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>dlmvc</servlet-name>
+    <url-pattern>/dlmvc/*</url-pattern>
+  </servlet-mapping>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
 </web-app>
