--- a/mvcpract/pom.xml
+++ b/mvcpract/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
