--- a/mvcpract/WebContent/WEB-INF/web.xml
+++ b/mvcpract/WebContent/WEB-INF/web.xml
@@ -38,4 +38,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
+  <welcome-file-list>
+  	<welcome-file>/login.jsp</welcome-file>
+  </welcome-file-list>
+  
 </web-app>
