--- a/mvcpract/pom.xml
+++ b/mvcpract/pom.xml
@@ -173,6 +173,13 @@
 
 		</dependency>
 
+<dependency>
+	<groupId>javax.mail</groupId>
+	<artifactId>mailapi</artifactId>
+	<version>1.4.3</version>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
